--- a/KnowGraph-frontend/src/pages/user/HomePage.css
+++ b/KnowGraph-frontend/src/pages/user/HomePage.css
@@ -181,6 +181,14 @@
   background: #edeff1;
   color: #0079d3;
 }
+.reddit-post-action-active {
+  background: #0079d3 !important;
+  color: #fff !important;
+}
+.reddit-post-action-active:hover {
+  background: #0066cc !important;
+  color: #fff !important;
+}
 .reddit-post + .reddit-post {
   margin-top: 32px;
 }
